# CMakeTest

./: CMakeLists.txt  main.cpp  version.h.in
